# ForzaDesigner6

./: .gitattributes  .gitignore  FD64FH6354221.spec  FD64FH6354221_onedir.spec  FD64FH6354221_onnx.spec  FD6MultiSupport.spec  FD6MultiSupport_onedir.spec  FD6MultiSupport_onnx.spec  ForzaAbyssPainter.spec  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_exe.bat  build_exe_onnx.bat  fd6_build046_log.txt  fd6_build047_log.txt  pyproject.toml
docs/: MULTISHAPE_FH6_RECON.md  NOTEBOOK_QUICKSTART.md  PUBLISHING.md  line_guide_measurements.json  line_guide_measurements_onnx.json  line_guide_measurements_onnx_gpu.json
fd6/: __main__.py  app.py  suite.py
forza_abyss_painter/: __main__.py  _build_info.py  app.py  suite.py
models/: README.md  line_guide.example.json
notebooks/: build_colab_notebook.py  fap_gpu_colab_headshots_700.ipynb  fap_gpu_colab_highres_3000.ipynb  fap_gpu_colab_lineart_400.ipynb  fap_gpu_colab_medium_1000.ipynb  fap_gpu_colab_shapes_highres_3000.ipynb  fap_gpu_colab_shapes_medium_1000.ipynb  fap_test_harness.ipynb
tests/: test_benchmark.py  test_cli_clean.py  test_distribution.py  test_engine_small.py  test_fh6_injector.py  test_fitsize.py  test_gpu_bbox_score.py  test_gpu_device.py  test_gpu_engine_small.py  test_gpu_parity.py  test_gpu_phase3_flag.py  test_gpu_preflight.py  test_gpu_rasterize.py  test_gpu_scoring.py  test_gpu_shapes.py  test_image_view.py  test_inject_syscall_count.py  test_inject_template_picker_real_qt.py  test_inject_upstream_scale_convention.py  test_install_runtime.py  test_joint_polish_color_snap.py  (+41 more)
(+125 files in other folders)
